tests/errors/syn_cases5.java
public class syn_cases5 {
public static void main(String[] args){
switch(args.length){
: break;
}
}
}